--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -28,7 +28,7 @@
 }
 
 .card__list-item {
-  font-family: Noto Serif;
+  font-family: "Serif";
   font-size: 16px;
   font-weight: normal;
   line-height: 20px;
