--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -23,11 +23,10 @@
   font-size: 44px;
   line-height: 52px;
   max-width: 780px;
-  margin-top: -110px;
+  margin: auto;
   margin-bottom: 24px;
+  display: flex;
   justify-content: center;
-  text-align: center;
-  padding: 40px;
 }
 
 .menu__subtitle {
@@ -35,20 +34,28 @@
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  line-height: 30px;
-  margin-top: -40px;
+  max-width: 780px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 100px;
   text-indent: -45px;
+  line-height: 30px;
 }
 
 .menu__cards {
   display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
+  list-style: none;
   flex-wrap: wrap;
   margin-left: 0;
   margin-right: 0;
-  gap: 40px;
   width: 100%;
-  justify-content: center;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  justify-content: center;
 }
