--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: url(/images/background_header.svg);
+  background-image: url(../images/background_header.svg);
   background-color: #fff;
   background-position: center;
   background-size: cover;
