--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,5 +1,5 @@
 .recipes {
-  background-image: url(/images/background_recipes.svg);
+  background-image: url(../images/background_recipes.svg);
   background-color: #ffffff;
   background-position: center;
   background-repeat: no-repeat;
