--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: #d9e7ff;
-  background-image: url(/images/2-background_reservation.svg);
+  background-image: url(../images/2-background_reservation.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
