--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,8 +1,8 @@
 .card {
-  font-family: Inter;
+  font-family: "Noto Sefif";
   font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
+  font-weight: normal;
+  font-size: 16px;
   line-height: 30px;
   color: #fff;
   flex-basis: 550px;
@@ -11,7 +11,8 @@
 }
 
 .card__title {
-  font-family: Inter;
+  font-family: "Inter";
+  font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
@@ -28,9 +29,10 @@
 }
 
 .card__list-item {
-  font-family: "Serif";
-  font-size: 16px;
+  font-family: "Nota Serif";
+  font-style: normal;
   font-weight: normal;
+  font-size: 16px;
   line-height: 20px;
   margin-bottom: 16px;
   justify-content: center;
