--- a/blocks/header.css
+++ b/blocks/header.css
@@ -21,7 +21,7 @@
   max-width: 729px;
   margin: 202px 0 0 80px;
   flex-direction: column;
-  font-family: Inter, Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 60px;
