--- a/blocks/header.css
+++ b/blocks/header.css
@@ -30,7 +30,7 @@
   margin-left: 0px;
 }
 
-.span__accent {
+.header__span-accent {
   font-family: "Noto serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
