--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,11 +1,11 @@
 .card {
-  font-family: "Noto Sefif";
+  font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 30px;
   color: #fff;
-  flex-basis: 550px;
+  flex-basis: 500px;
   align-items: center;
   max-width: 600px;
 }
@@ -16,25 +16,25 @@
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
-  color: #fff;
-  list-style: none;
   margin-bottom: 32px;
   margin-top: 0;
+  list-style: none;
 }
 
 .card__list {
+  color: #fff;
+  list-style: none;
   padding-left: 0;
   margin-bottom: 0;
-  list-style: none;
+  margin-top: 0;
 }
 
 .card__list-item {
-  font-family: "Nota Serif";
+  font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 16px;
   justify-content: center;
   display: flex;
 }
@@ -42,5 +42,10 @@
 .card__list-divider {
   display: flex;
   flex-grow: 1;
-  align-items: baseline;
+  border: 0;
+  border-bottom: 1px solid #fff;
+}
+
+.card__list-item:last-child {
+  margin-bottom: 0;
 }
