--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -34,7 +34,7 @@
 
 .footer__list-item {
   margin-bottom: 16px;
-  margin-left: 100px;
+  display: flex;
 }
 .footer__list-item:last-of-type {
   margin-bottom: 0;
