--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,7 +4,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: -1;
+  z-index: 1;
   height: 100vh;
   min-height: 720px;
   max-height: 800px;
@@ -47,7 +47,10 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  margin-bottom: 202px;
+  position: relative;
+  margin-top: 0;
+  z-index: 2;
+  margin-bottom: 0px;
 }
 
 .header__image {
