--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -12,6 +12,8 @@
 }
 
 .nav__link {
+  font-family: "Inter", Arial, sans-serif;
+	font-style: normal
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
