--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -7,11 +7,6 @@
   padding-left: 80px;
   padding-top: 100px;
   box-sizing: border-box;
-  padding: 100px 80px 140px;
-}
-
-.recipes__image {
-  position: absolute;
 }
 
 .recipes__title {
@@ -29,7 +24,8 @@
 
 .recipes__subtitle {
   font-family: "Noto Serif", "Times New Roman", serif;
-  font-weight: 500;
+  font-weight: normal;
+  font-style: normal;
   font-size: 20px;
   line-height: 30px;
   margin-bottom: 80px;
@@ -38,8 +34,8 @@
 }
 
 .recipes__iframe {
-  width: 100%;
-  height: 270px;
+  width: 480px;
+  height: 273px;
   border: none;
   position: relative;
   z-index: 1;
@@ -47,24 +43,25 @@
 }
 
 .recipes__video-caption {
-  margin: 24px 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   font-family: "Inter", serif;
+  font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
   list-style: none;
-  margin-bottom: 215;
+  margin-bottom: 215px;
+  margin-top: 24px;
 }
 
 .recipes__videos {
   display: flex;
+  gap: 40px;
+  margin: auto;
   justify-content: center;
   list-style: none;
   margin: 80px 0 0;
   padding: 0;
-  column-gap: 80px;
   flex-wrap: wrap;
 }
