--- a/blocks/about.css
+++ b/blocks/about.css
@@ -36,12 +36,15 @@
 }
 
 .about__title {
+  font-family: "Inter", "arial", "sans-serif";
+  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
   max-width: 251px;
-  margin-top: 100px;
   z-index: 1;
+  margin-top: 100px;
+  margin-bottom: 0;
 }
 
 .about__paragraph {
