--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,24 +1,25 @@
 .card {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 30px;
   color: #fff;
-  flex-basis: 500px;
+  flex-basis: 550px;
   align-items: center;
   max-width: 600px;
 }
 
 .card__title {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
+  color: #fff;
+  list-style: none;
   margin-bottom: 32px;
   margin-top: 0;
-  list-style: none;
 }
 
 .card__list {
@@ -30,18 +31,21 @@
 }
 
 .card__list-item {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 32px;
   justify-content: center;
   display: flex;
+  align-items: baseline;
+  margin-bottom: 16px;
 }
 
 .card__list-divider {
   display: flex;
   flex-grow: 1;
+  align-items: baseline;
   border: 0;
   border-bottom: 1px solid #fff;
 }
