--- a/blocks/header.css
+++ b/blocks/header.css
@@ -50,7 +50,7 @@
   position: relative;
   margin-top: 0;
   z-index: 2;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .header__image {
@@ -68,7 +68,7 @@
 }
 
 .header__paragraph {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
