--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -14,6 +14,8 @@
   justify-content: center;
   align-content: space-around;
   width: 100%;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .menu__title {
@@ -36,8 +38,8 @@
   font-size: 20px;
   line-height: 30px;
   max-width: 780px;
-  display: flex;
   text-align: center;
+  display: flex;
   justify-content: center;
   margin: auto;
   margin-bottom: 100px;
@@ -49,9 +51,9 @@
   flex-wrap: wrap;
   justify-content: center;
   list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
-  padding-left: 0;
-  margin-bottom: 0;
 }
