--- a/blocks/header.css
+++ b/blocks/header.css
@@ -48,7 +48,7 @@
   font-size: 20px;
   line-height: 30px;
   position: relative;
-  margin-top: 0;
+  margin-top: 28px;
   z-index: 2;
   margin-bottom: 0;
 }
