--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -13,7 +13,7 @@
 
 .nav__link {
   font-family: "Inter", Arial, sans-serif;
-	font-style: normal
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
