--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,6 +1,6 @@
 @keyframes pulsate {
   0% {
-    opacity: 0.6;
+    opacity: 0;
   }
   50% {
     opacity: 0.6;
@@ -31,12 +31,11 @@
   flex-direction: column;
   font-size: 20px;
   line-height: 20px;
-  margin-left: 128px;
   gap: 20px;
 }
 
 .about__title {
-  font-family: "Inter", "arial", "sans-serif";
+  font-family: "Inter", "arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
