--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -6,8 +6,6 @@
   background-size: cover;
   color: white;
   box-sizing: border-box;
-  margin-top: 10px;
-  padding: 100px;
   align-items: center;
   flex-direction: column;
   display: flex;
@@ -19,7 +17,7 @@
 }
 
 .menu__title {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
