--- a/blocks/form.css
+++ b/blocks/form.css
@@ -86,8 +86,14 @@
 }
 
 .form__terms {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
   display: flex;
   justify-content: center;
   margin-top: 32px;
   padding-bottom: 120px;
+  color: black;
 }
