--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -17,7 +17,7 @@
 }
 
 .menu__title {
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -30,7 +30,7 @@
 }
 
 .menu__subtitle {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
