--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -10,6 +10,11 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.footer__contents {
+  display: flex;
+  justify-content: space-between;
+}
 .footer__logo {
   width: 116px;
   height: 21px;
@@ -17,7 +22,7 @@
 
 .footer__social-heading {
   margin: 0 0 20px;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -47,7 +52,7 @@
 
 .footer__social-link {
   color: #fff;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -64,7 +69,7 @@
 
 .footer__copyright {
   margin: 108px 0 0;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Arial, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
