--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -14,7 +14,7 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Inter", "Arial", serif;
   max-width: 580px;
 }
 
