--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -11,7 +11,7 @@
 }
 
 .reservation__title {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-size: 44px;
   font-weight: 500;
