--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -23,7 +23,7 @@
 
 .footer__social-heading {
   margin: 0 0 20px;
-  font-family: "Inter", Arial, serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -53,7 +53,7 @@
 
 .footer__social-link {
   color: #fff;
-  font-family: "Inter", Arial, serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -70,7 +70,7 @@
 
 .footer__copyright {
   margin: 108px 0 0;
-  font-family: "Inter", Arial, serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
