--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -17,7 +17,7 @@
 }
 
 .menu__title {
-  font-family: "Inter", "Arial", serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
